--- a/index.html
+++ b/index.html
@@ -28,37 +28,40 @@
 <body>
 
 	<div class="container">
-		<div class="row login_box">
-			<div class="col-md-12 col-xs-12" align="center">
-				<div class="outter">
-					<img src="http://lorempixel.com/output/people-q-c-100-100-1.jpg" class="image-circle"/>	
+		<div class="row ">
+			<div class="col-md-3 center-block">
+				<div class="form-box">
+					<div class="outter text-center">
+						<img id="qr-image" class="img-responsive center-block" src="" />	
+					</div>
+
+					<h1 class="text-center">QR Generator</h1>
+
+					<div class="form-group">
+						<input type="text" class="input-field" placeholder="Código de Serie">
+					</div>
+
+					<div class="form-group">
+						<input type="text" class="input-field" placeholder="Número de Activación">
+					</div>
+
+					<div class="text-center">
+						<button id="submit-button" class="btn btn-wd">Show me!</button>
+					</div>
 				</div>
+				<!-- END login-box -->
 			</div>
-
-			<div class="col-md-12 col-xs-12 login_control">
-
-				<div class="control">
-					<div class="label">Número de Series</div>
-					<input type="text" class="form-control" value="admin@gmail.com"/>	
-				</div>
-
-				<div class="control">
-					<div class="label">Código de Activación</div>
-					<input type="password" class="form-control" value="123456"/>	
-				</div>
-				<div align="center">
-					<button class="btn btn-orange">LOGIN</button>
-				</div>
-
-			</div>
-
+			<!-- END col -->
 		</div>
+		<!-- END row -->
 	</div>
+	<!-- END container -->
 
 	<!-- Bootstrap core JavaScript
     ================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
