--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<img id="qr-image" class="img-responsive center-block" src="" />	
 					</div>
 
-					<h1 class="text-center">QR Generator</h1>
+					<h1 class="text-center">QR Code</h1>
 
 					<div class="form-group">
 						<input type="text" class="input-field" placeholder="Código de Serie">
@@ -46,7 +46,7 @@
 					</div>
 
 					<div class="text-center">
-						<button id="submit-button" class="btn btn-wd">Show me!</button>
+						<button id="submit-button" class="btn btn-wd">Generar</button>
 					</div>
 				</div>
 				<!-- END login-box -->
