--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 					<h1 class="text-center">QR Code</h1>
 
 					<div class="form-group">
-						<input type="text" class="input-field" placeholder="Código de Serie">
+						<input id="serial-number" type="text" class="input-field" placeholder="Código de Serie">
 					</div>
 
 					<div class="form-group">
-						<input type="text" class="input-field" placeholder="Número de Activación">
+						<input id="activation-code" type="text" class="input-field" placeholder="Número de Activación">
 					</div>
 
 					<div class="text-center">
