- Typo in placeholders

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="author" content="">
 	<link rel="icon" href="favicon.ico">
 
-	<title>Boilerplate</title>
+	<title>Login QR Generator</title>
 
 	<!-- Bootstrap core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -38,11 +38,11 @@
 					<h1 class="text-center">QR Code</h1>
 
 					<div class="form-group">
-						<input id="serial-number" type="text" class="input-field" placeholder="Código de Serie">
+						<input id="serial-number" type="text" class="input-field" placeholder="Número de Serie">
 					</div>
 
 					<div class="form-group">
-						<input id="activation-code" type="text" class="input-field" placeholder="Número de Activación">
+						<input id="activation-code" type="text" class="input-field" placeholder="Código de Activación">
 					</div>
 
 					<div class="text-center">
